# firewatch_agent

./: .gitignore  README.md  __init__.py  config.yaml  pyproject.toml
analysis/: __init__.py  analyze.py  grpo_group_metrics.py  loaders.py  plots.py  report.py  summaries.py
data_gen/: __init__.py  check_batch.py  review.py  run_generator.py  upload.py  validate.py  verify_replay.py
data_gen_scripts/: README.md  gen_01_mixed_metric_a.py  gen_02_mixed_metric_b.py  gen_03_mixed_metric_c.py  gen_04_mixed_metric_d.py  gen_05_mixed_metric_e.py  gen_06_mixed_substitution.py  gen_07_mixed_fault_stage.py  gen_08_mixed_suboptimal.py  gen_09_mixed_rh_salience.py  gen_10_mixed_adversarial.py  gen_11_mixed_alert_phrasing.py  gen_12_mixed_victim_root.py  gen_13_mixed_proactive.py  gen_14_mixed_memleak_theme.py  gen_15_mixed_bad_deploy_theme.py  gen_16_mixed_config_drift_theme.py  gen_17_mixed_action_ordering.py  gen_18_mixed_subst_adversarial.py  gen_19_mixed_high_noise.py  gen_20_mixed_incremental_difficulty.py  gen_21_mixed_network_partition.py  gen_22_mixed_dual_fault.py  gen_23_mixed_late_stage.py  gen_24_mixed_log_content.py  gen_25_mixed_rotation_f.py  gen_26_mixed_adversarial_intensive.py  gen_27_mixed_rotation_g.py  gen_28_mixed_rotation_h.py  gen_29_mixed_suboptimal_subst.py  gen_30_mixed_final_sweep.py
eval/: __init__.py  baseline.py  metrics.py  regression_guard.py  runner.py
gnn/: __init__.py  adjacency.py  model.py  serializer.py  train_gnn.py
grpo/: __init__.py  reward_extractor.py  rollout.py  sim_client.py  train.py
notebooks/: firewatch_sft_colab.ipynb  (+1 more)
(+63 files in other folders)
