[project]
name = "firewatch-agent"
version = "0.1.0"
description = "FirewatchEnv Three-Node Training Pipeline — Agent training infrastructure"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bitsandbytes>=0.44",
    "datasets>=2.14",
    "huggingface-hub>=0.24",
    "jsonschema>=4.0",
    "python-dotenv>=1.0",
    "websockets>=13.0",
    "peft>=0.13",
    "pyyaml>=6.0",
    "torch>=2.0",
    "torch-geometric>=2.5",
    "transformers>=4.45",
    "trl>=0.12",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
fast = [
    "hf-transfer>=0.1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
